.kubernetes/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nf-freelancer-api-service
spec:
  selector:
    app: fair-api
  ports:
    - port: 3000
      targetPort: 3000
      name: http
    - port: 443
      targetPort: 443
      name: https
