.kubernetes/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-deploy-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  # ingressClassName: nginx
  rules:
    - host: api.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nf-freelancer-api-service
                port:
                  number: 3000
